Melhoria na responsividade da página

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,25 +1,17 @@
 .about {
-    width: 100%;
     background-color: var(--background-base);
 }
 
-/* .about__container {
-    padding: 6.5rem 0;
-} */
-
- .about__title {
+.about__title {
     font-weight: 700;
-} 
-/* 
+}
+
 .about__paragraph {
     text-align: justify;
 
-    width: 75%;
-    font-size: 1rem;
     font-weight: 400;
-    line-height: 19px;
     padding-top: 1rem;
-} */
+}
 
 @media screen and (min-width: 0) {
     .about__container {
@@ -32,14 +24,10 @@
     }
 
     .about__paragraph {
-        text-align: justify;
-
         width: 100%;
-    
+
         font-size: 0.875rem;
-        font-weight: 400;
         line-height: 1rem;
-        padding-top: 1rem;
     }
 }
 
@@ -54,12 +42,8 @@
     }
 
     .about__paragraph {
-        text-align: justify;
-    
         width: 75%;
         font-size: 1rem;
-        font-weight: 400;
-        line-height: 19px;
-        padding-top: 1rem;
+        line-height: 1.188rem;
     }
 }
