--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,42 +1,36 @@
 .formcontato {
-    display: flex;
     background-color: var(--background-base);
 }
 
 .formcontato .container {
-    padding: 2rem 0;
-}
-
-.formcontato__contato {
-    display: flex;
-    flex-direction: row;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .formcontato__text {
-    display: flex;
-    flex-direction: column;
-
-    padding-left: 1rem;
+    padding: 0 1rem;
 }
 
 .formcontato__title {
     font-weight: 700;
 
-    padding-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .formcontato__subtext {
-    font-size: 1rem;
     font-weight: 500;
-    line-height: 19px;
 }
 
 .formcontato__form {
     display: flex;
     flex-direction: column;
 
-    padding-top: 1rem;
+    margin-top: 2rem;
     gap: 2rem;
+}
+
+.formcontato__form *::placeholder {
+    color: var(--color-text-base);
 }
 
 .formcontato__input {
@@ -49,12 +43,8 @@
 
     font-size: 1rem;
 
-    color: var(--white);
+    color: var(--color-text-base);
     background-color: var(--background-form);
-}
-
-::placeholder {
-    color: var(--white);
 }
 
 .formcontato__textarea {
@@ -70,7 +60,7 @@
 
     font-size: 1rem;
 
-    color: var(--white);
+    color: var(--color-text-base);
     background-color: var(--background-form);
 }
 
@@ -94,7 +84,7 @@
 
     border-radius: 4px;
 
-    color: var(--white);
+    color: var(--color-text-base);
     background-color: var(--background-button);
 }
 
@@ -106,57 +96,27 @@
 
 .formcontato__warn {
     display: flex;
+    flex-direction: column;
 
     align-items: center;
 
-    word-break: break-all;
+    gap: 1rem;
 }
 
 .formcontato__warnings {
     text-transform: uppercase;
-    width: max-content;
 
     font-size: 1.2rem;
     font-weight: 400;
-    padding-left: 1.5rem;
 
     opacity: 0;
 
     transition: opacity 1s;
 }
 
-/**/
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-    font-family: 'Raleway';
-
-    transition: background-color 50000s ease-in-out 0s;
-
-    -webkit-text-fill-color: var(--white);
-    --webkit-box-shadow: 0 0 0px 1000px var(--background-form) inset;
-}
-
 @media screen and (min-width: 0) {
-    .formcontato__contato {
-        flex-direction: column;
-
-        /* align-items: center; */
-    }
-
     .formcontato__image {
         display: none;
-    }
-
-    .formcontato__text {
-        padding-right: 1rem;
-        text-align: justify;
     }
 
     .formcontato__title {
@@ -164,64 +124,58 @@ select:-webkit-autofill:focus {
         line-height: 1.625rem;
     }
 
-    .formcontato__input, .formcontato__textarea {
+    .formcontato__subtext {
+        font-size: 1rem;
+        line-height: 1.188rem;
+    }
+
+    .formcontato__botao {
+        width: 100%;
+        height: 56px;
+    }
+
+    .formcontato__input,
+    .formcontato__textarea {
         width: 100%;
 
         box-sizing: border-box;
 
         padding: 1rem 1rem;
     }
-    
-    .formcontato__botao {
-        width: 100%;
-        height: 56px;
-
-        align-self: flex-start;
-    }
-
-    .formcontato__warn {
-        flex-direction: column;
-
-        gap: 1.5rem;
-    }
-    
 }
 
 @media screen and (min-width: 992px) {
+    
     .formcontato__contato {
-        flex-direction: row;
+        display: flex;
+        justify-content: center;
     }
-
+    
     .formcontato__image {
         display: flex;
     }
 
-    .formcontato__text {
-        padding-right: 0;
-        text-align: unset;
-    }
-
     .formcontato__title {
-        font-size: 2rem;
-        line-height: 2.375rem;
+        font-size: 1.375rem;
+        line-height: 1.625rem;
     }
 
-    .formcontato__input, .formcontato__textarea {
-        width: 100%;
-        box-sizing: border-box;
+    .formcontato__subtext {
+        font-size: 1rem;
+        line-height: 1.188rem;
     }
-    
 
     .formcontato__botao {
-        width: 200px;
-        height: 51px;
+        width: 100%;
+        height: 56px;
     }
 
-    .formcontato__warn {
-        flex-direction: row;
-        width: 620px;
+    .formcontato__input,
+    .formcontato__textarea {
+        width: 100%;
 
-        gap: 0;
+        box-sizing: border-box;
+
+        padding: 1rem 1rem;
     }
-    
 }
