--- a/assets/css/title.css
+++ b/assets/css/title.css
@@ -14,10 +14,18 @@
     flex-direction: column;
 
     justify-content: space-around;
+
+    padding: 1rem 0;
 }
 
-.title__profile {
-    border-radius: 10%;
+.title__bio {
+    font-weight: 700;
+}
+
+.title__subsection {
+    font-weight: 400;
+
+    padding: 1rem 0;
 }
 
 .title__profile:hover {
@@ -30,39 +38,31 @@
     gap: 2rem;
 }
 
+.title__network__item {
+    font-size: 0.875rem;
+    font-weight: 600;
+    line-height: 1rem;
+}
+
 @media screen and (min-width: 0) {
     .title__div {
         flex-direction: column;
     }
 
     .title__profile {
-        width: 150px;
-        height: 100px;
+        width: 200px;
+        height: 150px;
         
-        align-self: center;
+        border-radius: 50%;
     }
 
     .title__bio {
         font-size: 1.375rem;
         line-height: 1.625rem;
-        font-weight: 700;
     }
 
     .title__subsection {
         font-size: 0.875rem;
-        line-height: 1rem;
-        font-weight: 400;
-
-        padding: 1rem 0;
-    }
-
-    .title__container {
-        padding: 1rem 0;
-    }
-
-    .title__network__item {
-        font-size: 0.875rem;
-        font-weight: 600;
         line-height: 1rem;
     }
 }
@@ -76,7 +76,7 @@
         width: 368px;
         height: 368px;
         
-        align-self: auto;
+        border-radius: 10%;
     }
 
     .title__bio {
@@ -87,7 +87,6 @@
     .title__subsection {
         font-size: 1.375rem;
         line-height: 1.625rem;
-        font-weight: 400;
     }
 
     .title__container {
