--- a/assets/css/title.css
+++ b/assets/css/title.css
@@ -29,7 +29,7 @@
 }
 
 .title__profile:hover {
-    box-shadow: 0px 5px 5px 5px black;
+    box-shadow: 0 2px 5px 5px rgba(0, 0, 0, 0.6);
 }
 
 .title__network {
